crates/wac-parser/tests/resolution/fail/import-invalid-name.wac
package test:comp;

import x with "NOT-VALID-NAME!": func();
